<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="type_conference">Conference</string>
    <string name="type_competition">Competition</string>
    <string name="desc_conference">Conference merupakan event yang berbentuk pertemuan seperti workshop, seminar maupun webinar.</string>
    <string name="desc_competition">Competition merupakan event yang berkaitan dengan perlombaan yang ada pada bidang Teknologi.</string>
    <string name="title_add_event">Buat Event</string>
    <string name="title_edit_event">Sunting Event</string>
    <string name="hint_event_name">Nama Event</string>
    <string name="hint_category_event">Kategori Event</string>
    <string name="hint_cost">Biaya Masuk (Rp)</string>
    <string name="hint_date">Tanggal Event</string>
    <string name="hint_event_time">Waktu Event</string>
    <string name="hint_location">Lokasi Event</string>
    <string name="hint_registration">Link Pendaftaran</string>
    <string name="hint_desc">Deskripsi Event</string>
    <string name="hint_prerequisite">Prasayarat Mengikuti Event</string>
    <string name="text_masukan_poster_event">Masukan Poster Event</string>
    <string name="text_subtitle_poster_event">Poster akan ditampilkan pada halaman cover dan detail dari event yang akan anda adakan</string>
    <string name="text_publication_event">Publikasikan Event</string>
    <string name="text_edit_event">Simpan Perubahan</string>

</resources>